decrease logging level

--- a/nginx/servers/miiverse.conf
+++ b/nginx/servers/miiverse.conf
@@ -5,7 +5,7 @@ server {
   include miiverse/miiverse-discovery-ssl.conf;
 
   access_log /var/log/nginx/3ds/discovery.access.log combined;
-  error_log /var/log/nginx/3ds/discovery.error.log debug;
+  error_log /var/log/nginx/3ds/discovery.error.log warn;
 
   location / {
     proxy_pass http://127.0.0.1:19828/;
@@ -19,7 +19,7 @@ server {
   include miiverse/miiverse-3ds-ssl.conf;
 
   access_log /var/log/nginx/3ds/3ds.access.log combined;
-  error_log /var/log/nginx/3ds/3ds.error.log debug;
+  error_log /var/log/nginx/3ds/3ds.error.log warn;
 
   location / {
     proxy_pass http://127.0.0.1:19829/;
