add setup_port configuration

--- a/fediiverse/nginx/_template/fediiverse.conf
+++ b/fediiverse/nginx/_template/fediiverse.conf
@@ -49,7 +49,7 @@ server {
 
 # setup - Setup Utility over plain http
 server {
-	listen 80;
+	listen ${setup_port};
 	server_name ${setup_host};
 
 	access_log ${log_path}/setup.access.log combined_no_query;
