--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
 fastapi~=0.128.0
-pydantic~=2.10.5
-aiohttp~=3.12.14
-yarl~=1.20.1
+aiohttp~=3.13.3
+yarl~=1.22.0
 CairoSVG~=2.8.2
-aiofiles~=24.1.0
-emoji~=2.14.1
-beautifulsoup4~=4.13.4
-cryptography~=45.0.4
-pillow~=11.3.0
-orjson~=3.10.18
-uvicorn~=0.34.3
-aiosqlite~=0.21.0
+aiofiles~=25.1.0
+emoji~=2.15.0
+beautifulsoup4~=4.14.3
+cryptography~=46.0.4
+pillow~=12.1.0
+orjson~=3.11.5
+uvicorn~=0.40.0
+aiosqlite~=0.22.1
 qrcode~=8.2
 validators~=0.35.0
-questionary~=2.1.0
-python-multipart==0.0.21
+questionary~=2.1.1
+python-multipart~=0.0.22
